# ibm-mpi-tests

./: meson.build
ccl/: allgather.c  allreduce.c  alltoall.c  barrier.c  bcast.c  bcast_struct.c  gather.c  op.c  reduce.c  reduce_scatter.c  scan.c  scatter.c  struct_gatherv.c
comm/: attr.c  commdup.c  commfree.c  compare.c  intercomm.c  split.c
dtyp/: bakstr.c  bottom.c  getel.c  lbub.c  lbub2.c  loop.c  paktest.c  pptransp.c  strangest1.c  structsr.c  structsr2.c  transp.c  transp2.c  transp3.c  transpa.c  zero1.c  zero2.c  zero3.c  zero5.c  zero6.c
env/: abort.c  err.c  errstr.c  final.c  init.c  initialized.c  pcontrol.c  procname.c  wtime.c
group/: group.c  groupfree.c  range.c
pt2pt/: badbuf.c  bsend.c  bsend_free.c  buffer.c  cancel.c  cancel2.c  cancel3.c  free.c  getcount.c  interf.c  iprobe.c  isend.c  probe.c  rsend.c  rsend2.c  sendrecv.c  sendrecv_rep.c  seq.c  ssend.c  start.c  startall.c  test1.c  test2.c  test3.c  testall.c  testany.c  testsome.c  waitall.c  waitany.c  waitnull.c  waitsome.c  wildcard.c
topo/: cart.c  dimscreate.c  graph.c  sub.c
