project('ibm-mpi-tests', 'c', default_options : ['c_std=c89'])

# Collective operations
#bcast = executable('bcast', 'ccl/bcast.c')

allgather = executable('allgather', './ccl/allgather.c')
allreduce = executable('allreduce', './ccl/allreduce.c')
alltoall = executable('alltoall', './ccl/alltoall.c')
barrier = executable('barrier', './ccl/barrier.c')
bcast = executable('bcast', './ccl/bcast.c')
bcast_struct = executable('bcast_struct', './ccl/bcast_struct.c')
gather = executable('gather', './ccl/gather.c')
op = executable('op', './ccl/op.c')
reduce = executable('reduce', './ccl/reduce.c')
reduce_scatter = executable('reduce_scatter', './ccl/reduce_scatter.c')
scan = executable('scan', './ccl/scan.c')
scatter = executable('scatter', './ccl/scatter.c')
struct_gatherv = executable('struct_gatherv', './ccl/struct_gatherv.c')
attr = executable('attr', './comm/attr.c')
commdup = executable('commdup', './comm/commdup.c')
commfree = executable('commfree', './comm/commfree.c')
compare = executable('compare', './comm/compare.c')
intercomm = executable('intercomm', './comm/intercomm.c')
split = executable('split', './comm/split.c')
bakstr = executable('bakstr', './dtyp/bakstr.c')
bottom = executable('bottom', './dtyp/bottom.c')
getel = executable('getel', './dtyp/getel.c')
lbub2 = executable('lbub2', './dtyp/lbub2.c')
lbub = executable('lbub', './dtyp/lbub.c')
loop = executable('loop', './dtyp/loop.c')
paktest = executable('paktest', './dtyp/paktest.c')
pptransp = executable('pptransp', './dtyp/pptransp.c')
strangest1 = executable('strangest1', './dtyp/strangest1.c')
structsr2 = executable('structsr2', './dtyp/structsr2.c')
structsr = executable('structsr', './dtyp/structsr.c')
transp2 = executable('transp2', './dtyp/transp2.c')
transp3 = executable('transp3', './dtyp/transp3.c')
transpa = executable('transpa', './dtyp/transpa.c')
transp = executable('transp', './dtyp/transp.c')
zero1 = executable('zero1', './dtyp/zero1.c')
zero2 = executable('zero2', './dtyp/zero2.c')
zero3 = executable('zero3', './dtyp/zero3.c')
zero5 = executable('zero5', './dtyp/zero5.c')
zero6 = executable('zero6', './dtyp/zero6.c')
abort = executable('abort', './env/abort.c')
err = executable('err', './env/err.c')
errstr = executable('errstr', './env/errstr.c')
final = executable('final', './env/final.c')
init = executable('init', './env/init.c')
initialized = executable('initialized', './env/initialized.c')
pcontrol = executable('pcontrol', './env/pcontrol.c')
procname = executable('procname', './env/procname.c')
wtime = executable('wtime', './env/wtime.c')
group = executable('group', './group/group.c')
groupfree = executable('groupfree', './group/groupfree.c')
range = executable('range', './group/range.c')
badbuf = executable('badbuf', './pt2pt/badbuf.c')
bsend = executable('bsend', './pt2pt/bsend.c')
bsend_free = executable('bsend_free', './pt2pt/bsend_free.c')
buffer = executable('buffer', './pt2pt/buffer.c')
cancel2 = executable('cancel2', './pt2pt/cancel2.c')
cancel3 = executable('cancel3', './pt2pt/cancel3.c')
cancel = executable('cancel', './pt2pt/cancel.c')
free = executable('free', './pt2pt/free.c')
getcount = executable('getcount', './pt2pt/getcount.c')
interf = executable('interf', './pt2pt/interf.c')
iprobe = executable('iprobe', './pt2pt/iprobe.c')
isend = executable('isend', './pt2pt/isend.c')
probe = executable('probe', './pt2pt/probe.c')
rsend2 = executable('rsend2', './pt2pt/rsend2.c')
rsend = executable('rsend', './pt2pt/rsend.c')
sendrecv = executable('sendrecv', './pt2pt/sendrecv.c')
sendrecv_rep = executable('sendrecv_rep', './pt2pt/sendrecv_rep.c')
seq = executable('seq', './pt2pt/seq.c')
ssend = executable('ssend', './pt2pt/ssend.c')
startall = executable('startall', './pt2pt/startall.c')
start = executable('start', './pt2pt/start.c')
test1 = executable('test1', './pt2pt/test1.c')
test2 = executable('test2', './pt2pt/test2.c')
test3 = executable('test3', './pt2pt/test3.c')
testall = executable('testall', './pt2pt/testall.c')
testany = executable('testany', './pt2pt/testany.c')
testsome = executable('testsome', './pt2pt/testsome.c')
waitall = executable('waitall', './pt2pt/waitall.c')
waitany = executable('waitany', './pt2pt/waitany.c')
waitnull = executable('waitnull', './pt2pt/waitnull.c')
waitsome = executable('waitsome', './pt2pt/waitsome.c')
wildcard = executable('wildcard', './pt2pt/wildcard.c')
cart = executable('cart', './topo/cart.c')
dimscreate = executable('dimscreate', './topo/dimscreate.c')
graph = executable('graph', './topo/graph.c')
sub = executable('sub', './topo/sub.c')
